--- a/PullTest/dev1/home.html
+++ b/PullTest/dev1/home.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+<h1>This is a Heading</h1>
+<h1>This is a Heading</h1>
 </body>
 </html>
